syntax = "proto3";
package kratos.api;

option go_package = "infogpt/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Admin admin = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
    string proxy_url = 4;
    google.protobuf.Duration proxy_timeout = 5;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Admin {
  string openai_api_key = 1;
  string chatgpt_access_token = 2;
  string chatgpt_puid = 3;
  string proxy_url = 4;
  string telegram_token = 5;
  string gin_ratelimit_config = 6;
  OfficialAccount official_account = 7;
}

message OfficialAccount {
  string app_id = 1;
  string app_secret = 2;
  string token = 3;
  string encoding_aes_key = 4;
  map <string, string> auto_replay = 5;
}